Engine: created engine, edited OPENAPI
[#17] Spring project

BREAKING CHANGE: MicroService setup
